--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@bornfight/gocart",
+  "name": "@dango-digital/gocart",
   "version": "1.0.9",
-  "description": "goCart.js - Complete Shopify Ajax cart from Bornfight",
+  "description": "goCart.js - Complete Shopify Ajax cart from Bornfight, tuned by Dango",
   "keywords": [
     "shopify",
     "ajax",
@@ -110,7 +110,7 @@
   "dependencies": {
     "@shopify/theme-currency": "^3.1.0",
     "form-serialize": "^0.7.2",
-    "node-sass": "^4.14.1",
+    "sass": "^1.50.0",
     "whatwg-fetch": "^3.4.1"
   },
   "devDependencies": {
